--- a/src/estilos/tareas.css
+++ b/src/estilos/tareas.css
@@ -1,3 +1,9 @@
+.tareas-lista-contenedor{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 15px;
+}
 .tarea-contenedor {
     width: 500px;
     min-height: 65px; 
@@ -26,3 +32,19 @@
     height: 25px;
     margin: 5px;
   }
+.tarea-contenedor.completada {
+    background-color: #01a72b9e;
+    text-decoration: line-through;
+}
+.tarea-contenedor:nth-child(3n + 1) {
+    background-color: #1b1b32;
+}
+
+.tarea-contenedor:nth-child(3n + 2) {
+    background-color: #2a2a40;
+}
+
+.tarea-contenedor:nth-child(3n + 3) {
+    background-color: #3b3b4f;
+}
+
